Revision history for Test-Harness

3.14
        - Added --count and --nocount options to prove to control X/Y display
          while running tests.

3.13    2008-07-27
        - fixed various closure related leaks
        - made prove honour HARNESS_TIMER
        - Applied patches supplied by Alex Vandiver
          - add 'rules' switch to prove: allows parallel execution rules
            to be specified on the command line.
          - allow '**' (any path) wildcard in parallel rules
          - fix bug report address
          - make tprove_gtk example work again.

3.12    2008-06-22
        - applied Steve Purkis' huge refactoring patch which adds
          configurable factories for most of the major internal classes.
        - applied David Wheeler's patch to allow exec to be a code
          reference.
        - made tests more robust in the presence of -MFoo in PERL5OPT.

3.11    2008-06-09
        - applied Jim Keenan's patch that makes App::Prove::run return a
          rather than exit (#33609)
        - prove -r now recurses cwd rather than 't' by default (#33007)
        - restored --ext switch to prove (#33848)
        - added ignore_exit option to TAP::Parser and corresponding
          interfaces to TAP::Harness and Test::Harness. Requested for
          Parrot.
        - Implemented rule based parallel scheduler.
        - Moved filename -> display name mapping out of formatter. This
          prevents the formatter's strip-extensions logic from stripping
          extensions from supplied descriptions.
        - Only strip extensions from test names if all tests have the
          same extension. Previously we stripped extensions if all names
          had /any/ extension making it impossible to distinguish tests
          whose name differed only in the extension.
        - Removed privacy test that made it impossible to subclass
          TAP::Parser.
        - Delayed initialisation of grammar making it easier to replace