@@ -1,6 +1,8 @@
 Revision history for Test-Harness
 
 3.14
+        - After discussion with Andy, agreed to clean up the test output
+          somewhat.  t/foo.....ok becomes t/foo ... ok
         - Added --count and --nocount options to prove to control X/Y display
           while running tests.
 
